--- a/src/components/Flex/flex.module.css
+++ b/src/components/Flex/flex.module.css
@@ -23,14 +23,14 @@
   justify-content: center;
 }
 .gap-1 {
-  gap: 0.25em;
+  gap: 0.5rem;
 }
 .gap-2 {
-  gap: 0.5em;
+  gap: 1rem;
 }
 .gap-3 {
-  gap: 0.75em;
+  gap: 1.5rem;
 }
 .gap-4 {
-  gap: 1em;
+  gap: 2rem;
 }
